Update the rest of the program with Tlell icons

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -13,6 +13,7 @@
    • Switch icons from Breeze to Tlell
    • Remove the perpetually buggy tables feature
    • Add a new default theme - "Glacier"
+   • Revised "Olive" and "Luna" themes
 
 Version 9.2 (August 20, 2018)
    • Minor startup improvements
