--- a/Changelog.txt
+++ b/Changelog.txt
@@ -7,6 +7,7 @@
    • Remove "Embed Custom Symbols" checkbox
    • Icon now shown in window
    • Merge "Linguistics" menu and "Page" menu into "Notebook" menu
+   • Improve look of settings dialog
    
 Version 9.3 (April 13, 2019)
    • Update to .NET Framework 4.7.2
