--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,15 +1,16 @@
 ﻿Version 9.4 (April 30, 2019)
-   • Move all notebook file/dictionary file handling to C# library
    • Redesign symbols panel
    • Copy custom characters to clipboard
    • Add buttons to change case of characters in editor
    • Merge symbols panel, custom characters dialog, and accent dialog into one panel
    • Separate custom characters into File and Local   
-   • Fixed bug where dictionary wouldn't load if you opened a new notebook file when the dictionary was open
    • Remove "Embed Custom Symbols" checkbox
    • Icon now shown in window
    • Merge "Linguistics" menu and "Page" menu into "Notebook" menu
    • Improve look of settings dialog
+   • Toggle affricate button to dynamically create affricates (ts -> t͡s)
+   • Fixed bug where dictionary wouldn't load if you opened a new notebook file when the dictionary was open
+   • Character search
    
 Version 9.3 (April 13, 2019)
    • Update to .NET Framework 4.7.2
