Clean up ipatooltip

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -10,6 +10,7 @@
    • Improve look of settings dialog
    • Toggle affricate button to dynamically create affricates (ts -> t͡s)
    • Fixed bug where dictionary wouldn't load if you opened a new notebook file when the dictionary was open
+   • Pressing shift when inserting a character will insert it in uppercase
    • Character search
    • Speed up startup time
    
