--- a/Language Pad/My Project/Resources.resx
+++ b/Language Pad/My Project/Resources.resx
@@ -130,6 +130,9 @@
   <data name="Consonants" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Consonants.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
+  <data name="Diacritics" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Other.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
   <data name="HtmlStyle" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\HtmlStyle.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
@@ -138,9 +141,6 @@
   </data>
   <data name="KeyStyle" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\KeyStyle.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;iso-8859-1</value>
-  </data>
-  <data name="Other" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Other.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
   <data name="SmartReplace" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\SmartReplace.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
